# shortcut-models

./: LICENSE  README.md  environment.yml  github_trick.txt  helper_eval.py  helper_eval_for_mb.py  helper_inference.py  math_utils.py  model.py  pyproject.toml  requirements.txt  targets_consistency_distillation.py  targets_consistency_training.py  targets_livereflow.py  targets_naive.py  targets_shortcut.py  train.py
baselines/: targets_progressive.py
utils/: datasets.py  fid.py  norm.py  sharding.py  spectral_optimizer.py  train_state.py  wandb.py
