[project]
name = "shortcut-models"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = "==3.11.6"
dependencies = [
    "absl-py>=2.3.1",
    "chex==0.1.82",
    "cython<3",
    "diffusers>=0.35.2",
    "distrax==0.1.4",
    "einops>=0.8.1",
    "fabric>=3.2.2",
    "flax==0.7.4",
    "imageio>=2.37.0",
    "jax[tpu]==0.5.3",
    "jaxtyping>=0.3.3",
    "libtmux>=0.46.2",
    "matplotlib>=3.10.7",
    "ml-collections>=1.1.0",
    "moviepy>=2.2.1",
    "numba>=0.62.1",
    "numpy>=1.26.4",
    "opensimplex>=0.4.5.1",
    "opt-einsum>=3.4.0",
    "optax==0.1.7",
    "orbax==0.1.9",
    "plotly>=6.3.1",
    "protobuf<=3.20.3",
    "pygame>=2.6.1",
    "scipy>1.12.0",
    "tabulate>=0.9.0",
    "tensorflow-cpu>=2.16.0",
    "tensorflow-datasets>=4.9.9",
    "tensorflow-probability==0.22.0",
    "termcolor>=3.1.0",
    "threadpoolctl==3.1.0",
    "typeguard>=4.0.0",
    "wandb>=0.19.11",
    "wheel>=0.45.1",
]
